Revert "Merge branch 'main' of https://github.com/GLinhNguyen/BattleShipGame"
This reverts commit f7a5c2c3ca0d53586698b1ac1bf102b715fc5bb7, reversing
changes made to 53d03f7a5abb405333d2590773d94e603863c46d.